test/expected/declare_nri.out
declare x as non-returning int
        ^
9: error: built-in type can not be "noreturn"
